fix contrast issues

--- a/club_detailed.css
+++ b/club_detailed.css
@@ -70,3 +70,7 @@
   font-size: 1rem;
   color: #666;
 }
+
+.breadcrumb-text {
+  color: #142AFF;
+}
